@@ -1,5 +1,9 @@
 2025-11-10  Oliver Kiddle  <opk@zsh.org>
 
+	* 53377: Doc/Zsh/zle.yo, Src/Zle/termquery.c, Src/Zle/zle_misc.c,
+	Src/Zle/zle_utils.c, Test/X06termquery.ztst: support OSC52 paste
+	sequence with the "* and "+ vi registers
+
 	* 53372, 53375: Doc/Zsh/params.yo, Src/Zle/termquery.c,
 	Src/Zle/zle.mdd, Src/Zle/zle_main.c, Test/X04zlehighlight.ztst,
 	Test/X06termquery.ztst: query terminal properties on ZLE startup
